tests/positive/Internal/LiteralStringMain.juvix
module LiteralStringMain;

open import Stdlib.Prelude;

main : ℕ;
main ≔ 123;

end;
