tests/negative/issue1344/D.juvix
module D;
  import Other;
  import U;

  u : Other.Unit;
  u ≔ U.t;

end;
